turing-cms.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-turing
  namespace: turing-online
  labels:
    app: cms-turing
spec:
  ports:
  - port: 8004
    targetPort: 8083
  selector:
    app: cms-turing
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: cms-turing
  namespace: turing-online
  labels:
    app: cms-turing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms-turing
  template:
      metadata:
        labels:
          app: cms-turing
          container-name: cms-turing
      spec:
        containers:
          - name: cms-turing
            image: "docker.registry:5000/salon-test:1.0.130"
            imagePullPolicy: IfNotPresent
            resources:
              limits:
                memory: "4Gi"
                cpu: "4"
              requests:
                memory: "1Gi"
                cpu: "1"
            ports:
              - containerPort: 8083
                name: cms-turing
